apps/base/fast-api/fast-api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-api
  labels:
    app: fast-api
    istio-injection: enabled
