apps/base/fast-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
  labels:
    app: fast-api
spec:
  selector:
    app: fast-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
